# etddf_minau

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
config/: etddf.yaml  measurements.yaml  strapdown.yaml
launch/: associator.launch  etddf.launch  etddf_bruce.launch  etddf_guppy.launch  onward_dt.launch  onward_dt_sim.launch
msg/: Measurement.msg  MeasurementPackage.msg  NetworkEstimate.msg
scripts/: add_red_agents.py  add_red_agents2.py  associator.py  associator_node.py  etddf_node.py  etddf_node_new.py  meas_repub.py  plot_innovations.py  plot_measurements.py  plot_static_error.py  sonar_association.py  strapdown.py
src/cuquantization/: quantize.py  quantize_2.py
src/deltatier/: associator.py  controller.py  filter.py  filter_baro.py  filter_compass.py  filter_dvl.py  get_control.py  get_estimate_nav.py  get_waypoint.py  kf_filter.py  modem_schedule.py  normalize_angle.py  normalize_state.py  plot_error_nav.py  plot_error_track.py  plot_path.py  propagate_nav.py  set_estimate_nav.py  sim.py  sonar_controller.py  take_error_sonar_meas.py  take_sonar_meas.py
srv/: GetMeasurementPackage.srv
