<?xml version="1.1"?>
<package format="2">
  <name>etddf_minau</name>
  <version>2.0.0</version>
  <description>The etddf package for minau project</description>

  <maintainer email="luba6098@colorado.edu">LT</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>nav_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>minau</exec_depend> <!-- sonar_processing_node -->
  <depend>rospy</depend>

  <export>
  </export>
</package>